# DayDream_Engine

./: .gitignore  CMakeLists.txt  Eigen.7z  README.md  SDL2-2.0.7.7z  SOIL.7z  bullet3_287.7z  create_ddShaderEnums.cmd  create_ddShaderEnums.sh  create_dd_project.sh  create_shader_enums.cmd  create_shader_enums.sh  freetype-2.7.7z  glfw.7z  glm.7z  imgui.7z  imgui.ini  lua53_Win64_lib.7z  old_tools.7z  vk_include.7z  vk_lib_win_p1.7z  vk_lib_win_p2.7z  vk_runtime_win.7z  vrpn_lib_files.7z  vulkan_windows.7z
Core/: AssetManager.cpp  BaseAgent.cpp  Camera.cpp  DD_AISystem.cpp  DD_Agent.cpp  DD_AnimSystem.cpp  DD_AssetManager.cpp  DD_BaseAgent.cpp  DD_Camera.cpp  DD_ComputeGPU.cpp  DD_Engine.cpp  DD_EventQueue.cpp  DD_FileIO.cpp  DD_GameLevel.cpp  DD_Input.cpp  DD_Light.cpp  DD_LoadScreen.cpp  DD_LuaHooks.cpp  DD_Material.cpp  DD_MathLib.cpp  DD_MeshTypes.cpp  DD_Model.cpp  DD_ModelSK.cpp  DD_OBJ_Parser.cpp  DD_ParticleEngine.cpp  DD_ParticleTypes.cpp  DD_PhysicsEngine.cpp  DD_RenderEngine.cpp  DD_ResourceLoader.cpp  DD_Shader.cpp  DD_Terminal.cpp  DD_Text.cpp  DD_Texture2D.cpp  DD_Timer.cpp  Engine.cpp  EngineMain.cpp  EventQueue.cpp  FileIO.cpp  Input.cpp  Light.cpp  (+13 more)
Core/AssetViewer/: AssetNav.cpp  AssetNav.h  AssetViewAvatar.cpp  AssetViewAvatar.h  DD_AssetViewer.cpp  DD_AssetViewer.h
Projects/: instructions.txt
Projects/BBoxSkinnedMesh/: BBoxGraphics.cpp  BBoxGraphics.h  BBoxLuaStructs.cpp  BBoxLuaStructs.h  BBoxSkinnedMesh_actor.lua  BBoxSkinnedMesh_assets.lua  BBoxSkinnedMesh_funcs.cpp  BBoxSkinnedMesh_world.lua  ExecFile.lua  ManageBBox.lua  bbox_shader_enums.h  gen_shader_enums.sh
Projects/CrowdSim/: AIControlledAvatar.cpp  AiControlledAvatar.h  ControllerC.cpp  ControllerC.h  CrowdSim.cpp  CrowdSim.h  assets.ddres
Projects/DepthProjection/: ControllerDP.cpp  ControllerDP.h  DepthToObject.comp  Kinect_F.frag  Kinect_G.geom  Kinect_V.vert  ReconstructScene.cpp  ReconstructScene.h  assets.ddres  depthBinToJPG.m  depth_bin_parse.m
Projects/LevelBuilder/: LevelBuilder.cpp  LevelBuilder.h  Navigation.cpp  Navigation.h  assets.ddres
Projects/LightingTests/: LightingLvl.cpp  LightingLvl.h  LightingLvlNav.cpp  LightingLvlNav.h  base.ddm  sphere_main.ddm
Projects/PoseReconstruction/: ControllerP.cpp  ControllerP.h  MotionAvatar.cpp  MotionAvatar.h  PoseView.cpp  PoseView.h  agent_creation_linux.txt  agent_creation_windows.txt  assets.ddres
Projects/WaterLevel/: ControllerW.cpp  ControllerW.h  WaterLevel.cpp  WaterLevel.h  assets.ddres
Resource/: sample01.ddres
Resource/Capture/: ffmpeg_help.txt
Resource/Meshes/: Dillo.mtl  ball.mtl  blue.mtl  cylinders.mtl  cylinders_01.mtl  dome.mtl  floor.mtl  red.mtl  sample_ddm_meshes.7z  tempMesh.mtl
Resource/Shaders/: Blur.comp  Blur_C.comp  Blur_F.frag  ClothNorm_C.comp  Cloth_C.comp  Cloth_F.frag  Cloth_V.vert  DepthSP_F.frag  Depth_F.frag  Depth_V.vert  GBuffer_F.frag  GBuffer_V.vert  (+31 more)
cmake/: FindSDL2.cmake
fbx/: CMakeLists.txt
fbx/include/: FBX_Utility.h
fbx/src/: FBX_Utility.cpp  FBXmain.cpp
graphics_lib/: CMakeLists.txt
graphics_lib/gui_lib/: imgui_impl_glfw_gl3.cpp  imgui_impl_sdl_gl3.cpp
graphics_lib/include/: GPUFrontEnd.h  ddShader.h  gl_core_4_3.h  imgui.h  imgui_impl_glfw_gl3.h  imgui_impl_sdl_gl3.h
graphics_lib/includes/: GPUFrontEnd.h  ddShader.h  imconfig.h
graphics_lib/source/: Graphics_OGL.cpp  ddShader_OGL.cpp  gl_core_4_3.c  imgui_impl_glfw_gl3.cpp  imgui_impl_sdl_gl3.cpp  reflect_main.cpp
imgui/: imgui_impl_sdl_gl3.cpp
include/: Container.h  LuaHooks.h  StringLib.h  ddAnimation.h  ddAssetManager.h  ddAssets.h  ddBaseAgent.h  ddCamera.h  ddEngine.h  ddEventQueue.h  ddFileIO.h  ddImport_Model.h  ddImport_SkinnedData.h  ddIncludes.h  ddInput.h  ddLevelPrototype.h  ddLight.h  ddLuaLib.h  ddLuaLib_Animation.h  ddLuaLib_ddAgent.h  ddLuaLib_ddCamera.h  ddLuaLib_ddLight.h  ddLuaLib_ddMaterial.h  ddLuaLib_ddModelData.h  ddMaterial.h  ddModel.h  ddParticleSystem.h  ddPhysicsEngine.h  ddRenderEngine.h  ddSceneManager.h  ddShaderReflect.h  ddSkeleton.h  ddTerminal.h  ddTexture2D.h  ddTimer.h  freelist.h  stb.h  stb_image.h  stb_image_write.h
includes/: AssetManager.h  BaseAgent.h  Camera.h  Container.h  DD_AISystem.h  DD_AITypes.h  DD_Agent.h  DD_AnimState.h  DD_AnimSystem.h  DD_AssetManager.h  DD_BaseAgent.h  DD_Camera.h  DD_ComputeGPU.h  DD_Container.h  DD_Engine.h  DD_EventQueue.h  DD_EventTypes.h  DD_FileIO.h  DD_GameLevel.h  DD_Input.h  DD_Light.h  DD_LoadScreen.h  DD_LuaHooks.h  DD_Material.h  DD_MathLib.h  DD_MeshTypes.h  DD_Model.h  DD_ModelSK.h  DD_OBJ_Parser.h  DD_ParticleEngine.h  DD_ParticleTypes.h  DD_Physics.h  DD_PhysicsEngine.h  DD_RenderEngine.h  DD_ResourceLoader.h  DD_Shader.h  DD_Skeleton.h  DD_String.h  DD_Terminal.h  DD_Text.h  (+41 more)
old_tools/: DD_AISystem.cpp  DD_AISystem.h  DD_Agent.cpp  DD_Agent.h  DD_AnimState.h  DD_AnimSystem.cpp  DD_AnimSystem.h  DD_ComputeGPU.cpp  DD_ComputeGPU.h  DD_EventTypes.h  DD_MathLib.cpp  DD_MathLib.h  DD_ModelSK.cpp  DD_OBJ_Parser.cpp  DD_ParticleEngine.h  DD_ParticleTypes.cpp  DD_ParticleTypes.h  DD_RenderEngine.cpp  DD_ResourceLoader.cpp  DD_ResourceLoader.h  DD_Shader.cpp  DD_Shader.h  DD_Text.cpp  DD_Text.h  DD_Texture2D.cpp  DD_UnitTests.h  ddEngine_sdl.cpp
scripts/: DeadWorld_assets.lua  startup.lua
shader_lib/: CMakeLists.txt  create_ddShaderEnums.cmd  create_ddShaderEnums.sh  create_ddShaderEnums_win.sh
shader_lib/include/: ddShader.h  ddShaderReflect.h
shader_lib/src/: ddShader.cpp  shaderMain.cpp
shader_lib/utility/: Container.h  StringLib.h  ddFileIO.h
src/: LuaHooks.cpp  StringLib.cpp  ddAnimation.cpp  ddAssetManager.cpp  ddAssets.cpp  ddBaseAgent.cpp  ddCamera.cpp  ddEngine.cpp  ddEngineMain.cpp  ddEventQueue.cpp  ddFileIO.cpp  ddImport_Model.cpp  ddImport_SkinnedData.cpp  ddInput.cpp  ddLevelPrototype.cpp  ddLight.cpp  ddLuaLib.cpp  ddMaterial.cpp  ddModel.cpp  ddParticleSystem.cpp  ddPhysicsEngine.cpp  ddRenderEngine.cpp  ddSceneManager.cpp  ddTerminal.cpp  ddTimer.cpp  freelist.cpp
tools/: new_actor_script.sh  new_assets_script.sh  new_func_script.sh  new_world_script.sh
vrpn_lib_files/: vrpn.lib  vrpnd.lib
(+53 files in other folders)
